Index.html updates on name and header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">Nicholas Misawo</span>
 								</a>
 
 							<!-- Nav -->
@@ -51,7 +51,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>A Full Stack Data Science Actuary Portfolio</h1>
+								<h1>A Full Stack Data Science Actuary's Portfolio</h1>
 								<p>Transforming Risk Complexity To Data Clarity.</p>
 							</header>
 							<section class="tiles">
