--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<li><a href="generic.html">Actuarial Analytics</a></li>
 							<li><a href="generic.html">Data Science</a></li>
 							<li><a href="generic.html">Data Engineering</a></li>
-							<!-- <li><a href="elements.html">Other</a></li> -->
+							<li><a href="elements.html">Virtual Work Experience</a></li>
 						</ul>
 					</nav>
 
