--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Actuarial Analytics</a></li>
-							<li><a href="generic.html">Data Science</a></li>
+							<li><a href="generic.html">Actuarial Data Science</a></li>
+							<!-- <li><a href="generic.html">Data Science</a></li> -->
 							<li><a href="generic.html">Data Engineering</a></li>
+							<li><a href="generic.html">Data Visualisation</a></li>
+							<li><a href="generic.html">Hackathons</a></li>
 							<li><a href="elements.html">Virtual Work Experience</a></li>
 						</ul>
 					</nav>
@@ -51,7 +53,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>A Full Stack Data Science Actuary's Portfolio</h1>
+								<h1>A Data Science Actuary's Portfolio</h1>
 								<p>Transforming Risk Complexity To Data Clarity.</p>
 							</header>
 							<section class="tiles">
@@ -60,9 +62,9 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Magna</h2>
+										<h2>Actuarial Data Science</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Applying statistical excellence and machine learning to quantify, assess, and manage risk through innovative, data-driven insights</p>
 										</div>
 									</a>
 								</article>
@@ -71,31 +73,31 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Lorem</h2>
+										<h2>Data Engineering</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Building, integrating, and managing data for optimal analysis and insight.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<!-- <article class="style3">
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Feugiat</h2>
+										<h2>Data Science</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Transforming data into actionable insights through statistical analysis and machine learning.</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 								<article class="style4">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Tempus</h2>
+										<h2>Data Visualisation</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Converting complex data into graphical representations for clear, insightful analysis.</p>
 										</div>
 									</a>
 								</article>
@@ -104,9 +106,9 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Aliquam</h2>
+										<h2>Hackathons</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Collaborative events where programmers innovate, problem-solve, and create in a time-bound challenge.</p>
 										</div>
 									</a>
 								</article>
@@ -115,13 +117,13 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Veroeros</h2>
+										<h2>Virtual Experience Program</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>An online learning opportunity providing real-world insights and professional skill development.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<!-- <article class="style2">
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
@@ -186,7 +188,7 @@
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 							</section>
 						</div>
 					</div>
@@ -194,7 +196,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
+							<!-- <section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -213,7 +215,7 @@
 									</ul>
 								</form>
 							</section>
-							<section>
+							<section> -->
 								<h2>Follow</h2>
 								<ul class="icons">
 									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
@@ -221,13 +223,14 @@
 									<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
 									<!-- <li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
+									<!-- <li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li> -->
 									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
 									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; 2023 Nicholas Misawo. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2023 Nicholas Misawo. All rights reserved</li>
+								<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 							</ul>
 						</div>
 					</footer>
