--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Actuarial Data Science</a></li>
+							<li><a href="generic.html">Actuarial Data Science Projects</a></li>
 							<!-- <li><a href="generic.html">Data Science</a></li> -->
-							<li><a href="generic.html">Data Engineering</a></li>
-							<li><a href="generic.html">Data Visualisation</a></li>
+							<li><a href="generic.html">Data Engineering Projects</a></li>
+							<li><a href="generic.html">Data Visualisation Projects</a></li>
 							<li><a href="generic.html">Hackathons</a></li>
 							<li><a href="elements.html">Virtual Work Experience</a></li>
 						</ul>
@@ -62,7 +62,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Actuarial Data Science</h2>
+										<h2>Actuarial Data Science Projects</h2>
 										<div class="content">
 											<p>Applying statistical excellence and machine learning to quantify, assess, and manage risk through innovative, data-driven insights</p>
 										</div>
@@ -73,7 +73,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Data Engineering</h2>
+										<h2>Data Engineering Projects</h2>
 										<div class="content">
 											<p>Building, integrating, and managing data for optimal analysis and insight.</p>
 										</div>
@@ -95,7 +95,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Data Visualisation</h2>
+										<h2>Data Visualisation Projects</h2>
 										<div class="content">
 											<p>Converting complex data into graphical representations for clear, insightful analysis.</p>
 										</div>
