--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
 										</div>
 									</a>
 								</article>
-								<!-- <article class="style2">
+								<article class="style2">
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Ipsum</h2>
+										<h2>PyActuary</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A low-code machine Learning library for actuarial computations, integrating data science techniques and analysis.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<!-- <article class="style3">
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
 									</span>
