--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Actuarial Data Science Projects</a></li>
+							<li><a href="index.html">Actuarial Data Science Projects</a></li>
 							<!-- <li><a href="generic.html">Data Science</a></li> -->
-							<li><a href="generic.html">Data Engineering Projects</a></li>
-							<li><a href="generic.html">Data Visualisation Projects</a></li>
-							<li><a href="generic.html">Hackathons</a></li>
-							<li><a href="elements.html">Virtual Work Experience</a></li>
+							<li><a href="index.html">Data Engineering Projects</a></li>
+							<li><a href="index.html">Data Visualisation Projects</a></li>
+							<li><a href="index.html">Hackathons</a></li>
+							<li><a href="index.html">Virtual Work Experience</a></li>
+							<li><a href="index.html">PyActuary</a></li>
 						</ul>
 					</nav>
 
@@ -61,7 +62,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="index.html">
 										<h2>Actuarial Data Science Projects</h2>
 										<div class="content">
 											<p>Applying statistical excellence and machine learning to quantify, assess, and manage risk through innovative, data-driven insights</p>
@@ -72,7 +73,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="index.html">
 										<h2>Data Engineering Projects</h2>
 										<div class="content">
 											<p>Building, integrating, and managing data for optimal analysis and insight.</p>
@@ -94,7 +95,7 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="index.html">
 										<h2>Data Visualisation Projects</h2>
 										<div class="content">
 											<p>Converting complex data into graphical representations for clear, insightful analysis.</p>
@@ -105,7 +106,7 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="index.html">
 										<h2>Hackathons</h2>
 										<div class="content">
 											<p>Collaborative events where programmers innovate, problem-solve, and create in a time-bound challenge.</p>
@@ -116,7 +117,7 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="index.html">
 										<h2>Virtual Experience Program</h2>
 										<div class="content">
 											<p>An online learning opportunity providing real-world insights and professional skill development.</p>
@@ -127,7 +128,7 @@
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="index.html">
 										<h2>PyActuary</h2>
 										<div class="content">
 											<p>A low-code machine Learning library for actuarial computations, integrating data science techniques and analysis.</p>
