update main.css and index.html
removing the white cross on the tabs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">Nicholas Misawo</span>
+									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">Nicholas Misawo | Full-Stack Data Science Actuary </span>
 								</a>
 
 							<!-- Nav -->
@@ -54,8 +54,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>A Data Science Actuary's Portfolio</h1>
-								<p>Transforming Risk Complexity To Data Clarity.</p>
+								<h1>Transforming Risk Complexity To Data Clarity</h1>
+								<!-- <p>Transforming Risk Complexity To Data Clarity.</p> -->
 							</header>
 							<section class="tiles">
 								<article class="style1">
