update main.css and index.html
test the image output

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								</article> -->
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/data_viz.png" alt="" />
 									</span>
 									<a href="index.html">
 										<h2>Data Visualisation Projects</h2>
