--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/data_eng.png" alt="" />
 									</span>
 									<a href="index.html">
 										<h2>Data Engineering Projects</h2>
