update index.html and main.css

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/data_science.png" alt="" />
 									</span>
 									<a href="index.html">
 										<h2>Actuarial Data Science Projects</h2>
