update index.html and main.css

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/hackathon.png" alt="" />
 									</span>
 									<a href="index.html">
 										<h2>Hackathons</h2>
@@ -115,7 +115,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="images/virtual_exp.png" alt="" />
 									</span>
 									<a href="index.html">
 										<h2>Virtual Experience Program</h2>
@@ -124,7 +124,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="style3">
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
