update index.html and main.css

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/research.png" alt="" />
 									</span>
 									<a href="index.html">
 										<h2>PyActuary</h2>
