--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
+					<!-- <footer id="footer">
+						<div class="inner"> -->
 							<!-- <section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
@@ -218,12 +218,12 @@
 									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section> -->
-							<ul class="copyright">
-								<li>&copy; 2023 Nicholas Misawo. All rights reserved</li>
+							<!-- <ul class="copyright">
+								<li>&copy; 2023 Nicholas Misawo. All rights reserved</li> -->
 								<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
-							</ul>
+							<!-- </ul>
 						</div>
-					</footer>
+					</footer> -->
 
 			</div>
 
