--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
 									</a>
 								</article> -->
 							</section>
+							<ul class="copyright">
+								<li>&copy; 2023 Nicholas Misawo. All rights reserved</li>
+								<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+							</ul>
 						</div>
 					</div>
 
