--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 								</article> -->
 							</section>
 							<ul class="copyright">
-								<li>&copy; 2023 Nicholas Misawo. All rights reserved</li>
+								&copy; 2023 Nicholas Misawo. All rights reserved.
 								<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 							</ul>
 						</div>
