--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<!-- <header>
-								<h1>Transforming Risk Complexity To Data Clarity</h1>
-								<p>Transforming Risk Complexity To Data Clarity.</p>
-							</header> -->
+							<header>
+								<h3>Transforming Risk Complexity To Data Clarity</h3>
+								<!-- <p>Transforming Risk Complexity To Data Clarity.</p> -->
+							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
