--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 									</a>
 								</article> -->
 							</section>
-							<ul class="copyright">
+							<ul class="copyright" style = "margin-top: 2em;">
 								&copy; 2023 Nicholas Misawo. All rights reserved.
 								<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 							</ul>
