--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">Nicholas Misawo | Full-Stack Data Science Actuary </span>
+									<span class="symbol"><img src="images/logo.png" alt="" />
+									</span><span class="title">Nicholas Misawo | Full-Stack Data Science Actuary </span>
+									<span class="tagline">Transforming Complex Risk To Data Clarity</span>
 								</a>
 
 							<!-- Nav -->
