update index.html and main.css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.png" alt="" />
 									</span><span class="title">Nicholas Misawo | Full-Stack Data Science Actuary </span>
-									<span class="tagline">Transforming Complex Risk To Data Clarity</span>
+									<span class="tagline">Transforming Risk Complexity To Data Clarity</span>
 								</a>
 
 							<!-- Nav -->
@@ -55,10 +55,10 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<header>
-								<h1>Transforming Risk Complexity To Data Clarity</h1>
+							<!-- <header> -->
+								<!-- <h1>Transforming Risk Complexity To Data Clarity</h1> -->
 								<!-- <p>Transforming Risk Complexity To Data Clarity.</p> -->
-							</header>
+							<!-- </header> -->
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
