--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 							</section>
 							<ul class="copyright" style = "margin-top: 5em;">
 								&copy; 2023 Nicholas Misawo. All rights reserved.
-								<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+								<li>Images: <a href="https://www.freepik.com/author/stories">by storyset on Freepik</a></li>
 							</ul>
 						</div>
 					</div>
