--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 								</article> -->
 							</section>
 							<ul class="copyright" style = "margin-top: 5em;">
-								&copy; 2023 Nicholas Misawo. All rights reserved.
-								<li>Images: <a href="https://www.freepik.com/author/stories">by storyset on Freepik</a></li>
+								&copy; 2023 Nicholas Misawo. All rights reserved. | 
+								Images: <a href="https://www.freepik.com/author/stories">by storyset on Freepik</a>
 							</ul>
 						</div>
 					</div>
