--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.png" alt="" /></span>
 									<span class="title">Nicholas Misawo | Full-Stack Data Science Actuary </span>
+									<span class="tagline">Transforming Risk Complexity To Data Clarity</span>
 								</a>
-								<b></b>
-							<a><span class="tagline">Transforming Risk Complexity To Data Clarity</span></a>
 
 							<!-- Nav -->
 								<nav>
