--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.png" alt="" /></span>
 									<span class="title">Nicholas Misawo | Full Stack Data Science Actuary </span>
-									<!-- <span class="tagline">Transforming Risk Complexity To Data Clarity</span> -->
+									<span class="tagline">Transforming Risk Complexity To Data Clarity</span>
 								</a>
 
 							<!-- Nav -->
