--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 							<!-- Logo -->
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.png" alt="" /></span>
-									<span class="title">Nicholas Misawo | Full Stack Data Science Actuary </span>
+									<span class="title">Nicholas Misawo | Full Stack Data Science Actuary<span class="tagline">Transforming Risk Complexity To Data Clarity</span></span>
 								</a>
-								<span class="tagline">Transforming Risk Complexity To Data Clarity</span>
+								
 
 							<!-- Nav -->
 								<nav>
