--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<!-- Logo -->
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.png" alt="" /></span>
-									<span class="title">Nicholas Misawo | Full Stack Data Science Actuary<span class="tagline">Transforming Risk Complexity To Data Clarity</span></span>
+									<span class="title">Nicholas Misawo | Full Stack Data Science Actuary<br><span class="tagline">Transforming Risk Complexity To Data Clarity</span></span>
 								</a>
 								
 
