--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<a  class="logo"> 
+									<!-- href="index.html"  -->
 									<span class="symbol"><img src="images/logo.png" alt="" /></span>
 									<span class="title">Nicholas Misawo | Full Stack Data Science Actuary<br><span class="tagline">Transforming Risk Complexity To Data Clarity</span></span>
 								</a>
