--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<li><a href="index.html">Data Visualisation Projects</a></li>
 							<li><a href="index.html">Hackathons</a></li>
 							<li><a href="index.html">Virtual Work Experience</a></li>
-							<li><a href="index.html">PyActuary</a></li>
+							<li><a href="index.html">Research</a></li>
 						</ul>
 					</nav>
 
