update index.html and main.css

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 										<img src="images/research.png" alt="" />
 									</span>
 									<a href="index.html">
-										<h2>PyActuary</h2>
+										<h2>Research</h2>
 										<div class="content">
-											<p>A low-code machine Learning library for actuarial computations, integrating data science techniques and analysis.</p>
+											<p>Research on a low-code machine Learning library for actuarial computations, integrating data science techniques and analysis.</p>
 										</div>
 									</a>
 								</article>
