Updated act_ds_proj.html and index.html

--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="index.html">Actuarial Data Science Projects</a></li>
-							<!-- <li><a href="generic.html">Data Science</a></li> -->
+							<li><a href="act_ds_proj.html">Actuarial Data Science Projects</a></li>
 							<li><a href="index.html">Data Engineering Projects</a></li>
 							<li><a href="index.html">Data Visualisation Projects</a></li>
 							<li><a href="index.html">Hackathons</a></li>
-							<li><a href="index.html">Virtual Work Experience</a></li>
+							<li><a href="index.html">Virtual Experience Programs</a></li>
 							<li><a href="index.html">Research</a></li>
 						</ul>
 					</nav>
@@ -56,16 +55,12 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<!-- <header> -->
-								<!-- <h1>Transforming Risk Complexity To Data Clarity</h1> -->
-								<!-- <p>Transforming Risk Complexity To Data Clarity.</p> -->
-							<!-- </header> -->
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/data_science.png" alt="" />
 									</span>
-									<a href="index.html">
+									<a href="act_ds_proj.html">
 										<h2>Actuarial Data Science Projects</h2>
 										<div class="content">
 											<p>Applying statistical excellence and machine learning to quantify, assess, and manage risk through innovative, data-driven insights</p>
@@ -127,61 +122,6 @@
 										</div>
 									</a>
 								</article>
-								<!-- <article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dolor</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article> -->
 							</section>
 							<ul class="copyright" style = "margin-top: 5em;">
 								&copy; 2023 Nicholas Misawo. All rights reserved. | 
@@ -189,49 +129,6 @@
 							</ul>
 						</div>
 					</div>
-
-				<!-- Footer -->
-					<!-- <footer id="footer">
-						<div class="inner"> -->
-							<!-- <section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section> -->
-								<!-- <h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
-								</ul>
-							</section> -->
-							<!-- <ul class="copyright">
-								<li>&copy; 2023 Nicholas Misawo. All rights reserved</li> -->
-								<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
-							<!-- </ul>
-						</div>
-					</footer> -->
-
 			</div>
 
 		<!-- Scripts -->
