--- a/act_ds_proj.html
+++ b/act_ds_proj.html
@@ -21,9 +21,9 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<!-- <a href="index.html" class="logo">
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
-								</a>
+								</a> -->
 
 							<!-- Nav -->
 								<nav>
@@ -52,16 +52,16 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Elements</h1>
+							<h1>Actuarial Data Science Projects</h1>
 
 							<!-- Image -->
 								<section>
-									<h2>Image</h2>
+									<!-- <h2>Image</h2>
 									<h3>Fit</h3>
 									<div class="box alt">
 										<div class="row gtr-uniform">
 											<div class="col-12"><span class="image fit"><img src="images/pic13.jpg" alt="" /></span></div>
-										</div>
+										</div> -->
 									</div>
 									<h3>Left &amp; Right</h3>
 									<p><span class="image left"><img src="images/pic14.jpg" alt="" />
