--- a/act_ds_proj.html
+++ b/act_ds_proj.html
@@ -56,12 +56,12 @@
 
 							<!-- Image -->
 								<section>
-									<!-- <h2>Image</h2>
-									<h3>Fit</h3>
+									<!-- <h2>Image</h2> -->
+									<!-- <h3>Fit</h3> -->
 									<div class="box alt">
 										<div class="row gtr-uniform">
-											<div class="col-12"><span class="image fit"><img src="images/pic13.jpg" alt="" /></span></div>
-										</div> -->
+											<!-- <div class="col-12"><span class="image fit"><img src="images/pic13.jpg" alt="" /></span></div> -->
+										</div>
 									</div>
 									<!-- <h3>Left &amp; Right</h3> -->
 									<p><span class="image left"><img src="images/pic14.jpg" alt="" />
