--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 										<img src="images/virtual_exp.png" alt="" />
 									</span>
 									<a href="index.html">
-										<h2>Virtual Experience Program</h2>
+										<h2>Virtual Experience Programs</h2>
 										<div class="content">
 											<p>An online learning opportunity providing real-world insights and professional skill development.</p>
 										</div>
